welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:28: error: value unary_! is not a member of Unit
		if (estFaceMur() && !(murNord())) {
                                    ^SnakeBuggle:52: error: value unary_! is not a member of Unit
	} while (!posFinale())
                 ^